--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
 							<li><a href="#sponsors">Partenaires</a></li>
 							<li><a href="#how-it-works">Déroulement</a></li>
 							<li><a href="#keynotes">Keynotes</a></li>
-							<li><a href="#coachs">Coachs</a>
+							<li><a href="#coachs">Coachs &amp; Jury</a>
 							<!--
-								<li><a href="#coachs">Coachs &amp; Jury</a>
 								<li><a href="#prizes">Prix</a>
 								<li><a href="#winners">Résultats</a>
 							-->
@@ -836,7 +835,7 @@
 
 			</section>
 
-			<!--<section id="jury" class="team-section section">
+			<section id="jury" class="team-section section">
 				<div class="container-fluid">
 					
 					<h2 class="section-heading text-center">Le Jury</h2>
@@ -844,11 +843,21 @@
 					<div class="team-row row">
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/jury/sebastien-leduc.jpg" alt="Sébastien LEDUC">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/jury/philippe-commaret.jpg" alt="Philippe COMMARET">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Sébastien LEDUC</h4>
-									<div class="team-member-position">Responsable Compétitivité des Entreprises et Dynamique des Territoires à l'ADIR. Intervient en appui des projets de développement des entreprises et notamment sur les nouvelles organisations de la production.</div>
+									<h4 class="team-member-name">Philippe COMMARET</h4>
+									<div class="team-member-position">Directeur General d’ES Energies Strasbourg</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/jury/isabelle-hussherr.jpg" alt="Isabelle HUSSHERR">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Isabelle HUSSHERR</h4>
+									<div class="team-member-position">Secrétaire Générale de la Fédération des Industries d’Alsace</div>
 								</div>
 							</div>
 						</div>
@@ -858,53 +867,37 @@
 								<img class="team-member-picture" src="images/contents/jury/francois-kormann.jpg" alt="François KORMANN">
 								<div class="team-member-text">
 									<h4 class="team-member-name">François KORMANN</h4>
-									<div class="team-member-position">Président, fondateur de <a href="http://www.la-fabrique.org/" target="_blank">LA FABRIQUE</a> "Centre de Production Partagé".</div>
+									<div class="team-member-position">Président et fondateur de La Fabrique, centre de production partagé"</div>
 								</div>
 							</div>
 						</div>
-
-						<div class="hidden-md hidden-lg clear"></div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/jury/viviane-zeller.jpg" alt="Viviane ZELLER">
+								<img class="team-member-picture" src="images/contents/jury/patrick-llerena.jpg" alt="Patrick LLERENA">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Viviane ZELLER</h4>
-									<div class="team-member-position"> Ingénieur INSA génie mécanique option production automatisée, MBA Directeur d’usines chez Hager pendant plus de 15 ans. Actuellement, Consultant & Coach en performances industrielles et fondatrice d’une entreprise innovante.</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="hidden-sm hidden-lg clear"></div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/jury/fabrice-urban.jpg" alt="Fabrice URBAN">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Fabrice URBAN</h4>
-									<div class="team-member-position">Président directeur général des Usines Quiri à Duttlenheim et Strasbourg.</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="hidden-md hidden-lg clear"></div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/jury/philippe-commaret.jpg" alt="Philippe Commaret">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Philippe Commaret</h4>
-									<div class="team-member-position">Directeur ÉS Énergies Strasbourg</div>
+									<h4 class="team-member-name">Patrick LLERENA</h4>
+									<div class="team-member-position">Professeur en Sciences Économiques Laboratoire BETA</div>
 								</div>
 							</div>
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/jury/jean-claude-mutschler.jpg" alt="Jean-Claude Mutschler">
+								<img class="team-member-picture" src="images/contents/jury/jean-michel-staerle.jpg" alt="Jean-Michel STAERLÉ">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Jean-Claude Mutschler</h4>
-									<div class="team-member-position">Directeur ESR</div>
+									<h4 class="team-member-name">Jean-Michel STAERLÉ</h4>
+									<div class="team-member-position">Responsable du développement Ouest et Nord à l'ADIRA</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/jury/jacques-wolff.jpg" alt="Jacques WOLFF">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Jacques WOLFF</h4>
+									<div class="team-member-position">Président fondateur de l’entreprise Sewosy</div>
 								</div>
 							</div>
 						</div>
@@ -913,7 +906,7 @@
 
 				</div>
 
-			</section>-->
+			</section>
 
 			<!--<section id="prizes" class="section section-dark">
 				
