--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="René CARRAZ">
+								<img class="team-member-picture" src="images/contents/coach/rene-carraz.jpg" alt="René CARRAZ">
 								<div class="team-member-text">
 									<h4 class="team-member-name">René CARRAZ</h4>
 									<div class="team-member-position">ACCRO</div>
