--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 							<li><a href="#how-it-works">Déroulement</a></li>
 							<li><a href="#keynotes">Keynotes</a></li>
 							<li><a href="#coachs">Coachs &amp; Jury</a>
+							<li><a href="#prizes">Prix</a>
 							<!--
-								<li><a href="#prizes">Prix</a>
 								<li><a href="#winners">Résultats</a>
+								<li><a href="#faq">FAQ</a></li>
 							-->
-							<li><a href="#faq">FAQ</a></li>
 
 							<!-- HEADER ACTION BUTTON -->
 							<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2016-27211092109" class="btn btn-primary">S'inscrire</a></li>
@@ -400,6 +400,7 @@
 						<a href="http://innovationweek.fr/" target="_blank"><img src="images/contents/innoweek.png" alt="Innoweek"></a>
 						<a href="http://marque.alsace/" target="_blank"><img src="images/contents/acoeur.png" alt="Marque Alsace"></a>
 						<a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img src="images/contents/strasbourg-etudiants.png" alt="Strasbourg aime ses étudiants"></a>
+						<a href="http://alsacalcul.unistra.fr/" target="_blank"><img src="images/contents/alsacalcul.jpg" alt="Alsa Calcul"></a>
 						<!--<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>-->
 						<!--<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>-->
 						<!--<a href="http://prworldmedia.com/" target="_blank"><img src="images/contents/prworldmedia.jpg" alt="PR World Media"></a>-->
@@ -908,7 +909,7 @@
 
 			</section>
 
-			<!--<section id="prizes" class="section section-dark">
+			<section id="prizes" class="section section-dark">
 				
 				<div class="section-background">
 					<div class="section-background-image parallax" data-stellar-ratio="0.4">
@@ -942,18 +943,32 @@
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix ÉS</h3>
-									<p>Pour encourager la créativité et l'innovation, le groupe ES soutiendra un projet en lui ouvrant un crédit à hauteur de 2000 euros pour l'achat de matériel ou services nécessaires à la poursuite du projet (hebergement, hardware, software, imprimante 3D ...)</p>
+									<p>Incubation d’une Startup pendant 6 mois</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix ORANGE</h3>
+									<p>Formation pour utiliser api, lesquelles et pour quel usage - notamment iot<br>Une journee en boutique pour tester son produit</p>
+								</div>
+							</div>							
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix « RHÉNATIC »</h3>
+									<p>Proposé par Rhénatic - Cluster du Numerique<br>4 demi-journées d’accompagnement du porteur de projet  par Digit Prime + 2CRSI + Evolution Service</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix ACCRO</h3>
+									<p></p>
 								</div>
 							</div>
 						</div>
 						<div class="about-text col-md-6">
-							<div class="row">
-								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
-								<div class="col-xs-9">
-									<h3>Prix RHÉNA2</h3>
-									<p>● Un accompagnement pour une startup jusqu’à sa première levée de fond<br>● Révélation de l’excellence des leaders du projet<br>● Mise en cohérence de l’ADN du projet avec l’excellence des leaders<br>● Coaching des leaders dans l’affirmation de leur contribution maximale au projet<br>● Accompagnement du projet dans son futur émergent jusqu’à la rencontre de ses premiers financeurs</p>
-								</div>
-							</div>
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
@@ -968,13 +983,27 @@
 									<p>Les lauréats Alsace Digitale auront accès à l’espace Flex pendant 6 mois pour tous les membres de l’équipe, ainsi qu’un accès gratuit à tous les évènements organisés par l’association juqu’à fin mars 2016.</p>
 								</div>
 							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix ALSA CALCUL</h3>
+									<p>Formation à l’Utilisation du processeur graphique parallèlement aux processeurs pour accélérer les solutions numériques;programmation GPU, outils avancés, en partenariat avec Nvidia (durée 1 journée)</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix RHÉNA2</h3>
+									<p>● Un accompagnement pour une startup jusqu’à sa première levée de fond<br>● Révélation de l’excellence des leaders du projet<br>● Mise en cohérence de l’ADN du projet avec l’excellence des leaders<br>● Coaching des leaders dans l’affirmation de leur contribution maximale au projet<br>● Accompagnement du projet dans son futur émergent jusqu’à la rencontre de ses premiers financeurs</p>
+								</div>
+							</div>
 						</div>
 
 					</div>
 
 				</div>
 
-			</section>-->
+			</section>
 
 			<!--<section id="winners" class="section">
 
