--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Sabine CULLMANN">
+								<img class="team-member-picture" src="images/contents/coach/sabine-cullmann.jpg" alt="Sabine CULLMANN">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Sabine CULLMANN</h4>
 									<div class="team-member-position">Gestion de projet et innovation</div>
