--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Bastien STELLA">
+						<img class="team-member-picture" src="images/contents/coach/bestien-stella.jpg" alt="Bastien STELLA">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Bastien STELLA</h4>
 							<div class="team-member-position">Expert comptable</div>
