--- a/index.html
+++ b/index.html
@@ -581,6 +581,26 @@
 								</div>
 							</div>
 						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/coach/pascal-bastien.jpg" alt="Pascal BASTIEN">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Pascal BASTIEN</h4>
+									<div class="team-member-position">Team coach</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Fabien BRENNER">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Fabien BRENNER</h4>
+									<div class="team-member-position">Croissanceo</div>
+								</div>
+							</div>
+						</div>
 						
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
@@ -612,69 +632,32 @@
 							</div>
 						</div>
 
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/sabine-cullmann.jpg" alt="Sabine CULLMANN">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Sabine CULLMANN</h4>
-									<div class="team-member-position">Gestion de projet et innovation</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/tamim-daoudi.jpg" alt="Tamim DAOUDI">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Tamim DAOUDI</h4>
-									<div class="team-member-position">Designer industriel</div>
-								</div>
-							</div>
-						</div>
-
-						<!--
-
-						<div class="hidden-md hidden-lg clear"></div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/yann-klis.jpg" alt="Yann KLIS">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Yann KLIS</h4>
-								</div>
-							</div>
-						</div>
-
-						<div class="hidden-sm hidden-lg clear"></div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/patrick-llerena.jpg" alt="Patrick LLERENA">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Patrick LLERENA</h4>
-								</div>
-							</div>
-						</div>
-
-						<div class="hidden-md hidden-lg clear"></div>
-
-						
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Léo UNBEKANDT</h4>
-								</div>
-							</div>
-						</div>-->
-
 					</div>
 
 				</div>
 			</section>
 
 			<section class="team-section section" style="padding-top: 0;">
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/sabine-cullmann.jpg" alt="Sabine CULLMANN">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Sabine CULLMANN</h4>
+							<div class="team-member-position">Gestion de projet et innovation</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/tamim-daoudi.jpg" alt="Tamim DAOUDI">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Tamim DAOUDI</h4>
+							<div class="team-member-position">Designer industriel</div>
+						</div>
+					</div>
+				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
@@ -698,6 +681,16 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/franck-hoonakker.jpg" alt="Franck HOONAKKER">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Franck HOONAKKER</h4>
+							<div class="team-member-position">Croissanceo</div>
+						</div>								
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/marie-hunyadi.jpg" alt="Marie HUNYADI">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Marie HUNYADI</h4>
@@ -705,6 +698,10 @@
 						</div>								
 					</div>
 				</div>
+
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
@@ -734,14 +731,10 @@
 							<div class="team-member-position">Développement de projet </div>
 						</div>
 					</div>
-				</div>
-
-			</section>
-
-			<section class="team-section section" style="padding-top: 0;">				
+				</div>	
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/axel-neveux.jpg" alt="Axel NEVEUX">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Axel NEVEUX</h4>
@@ -751,7 +744,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/alban-petit.jpg" alt="Alban PETIT">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Alban PETIT</h4>
@@ -761,7 +754,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/florian-petit.jpg" alt="Florian PETIT">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Florian PETIT</h4>
@@ -769,6 +762,10 @@
 						</div>
 					</div>
 				</div>
+
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
@@ -800,12 +797,8 @@
 					</div>
 				</div>
 
-			</section>
-
-			<section class="team-section section" style="padding-top: 0;">	
-
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/bestien-stella.jpg" alt="Bastien STELLA">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Bastien STELLA</h4>
@@ -815,7 +808,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/jean-daniel-weisz.jpg" alt="Jean-Daniel WEISZ">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Jean-Daniel WEISZ</h4>
@@ -825,7 +818,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Manuel YGUEL</h4>
