--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix « RHÉNATIC »</h3>
-									<p>Proposé par Rhénatic - Cluster du Numerique<br>4 demi-journées d’accompagnement du porteur de projet  par Digit Prime + 2CRSI + Evolution Service</p>
+									<p>Proposé par Rhénatic - Cluster du Numerique<br>4 demi-journées d’accompagnement du porteur de projet  par Digit Prime + 2CRSI + Evolution Service + ITS Future</p>
 								</div>
 							</div>
 							<div class="row">
@@ -1088,7 +1088,9 @@
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
 								<h4 class="faq-item-heading">Quel matériel ?</h4>
-								<div class="faq-item-text">Chacun ramène son propre matériel. Le FabLab de l'INSA est partenaire du projet. Il est utilisable en fonction des besoins.</div>
+								<div class="faq-item-text">Chacun ramène son propre matériel. Le FabLab de l'INSA est partenaire du projet. Il est utilisable en fonction des besoins. La startup Strataggem propose l'accès à la plateforme LoRa Wavebricks, a du matériel pour réaliser des objets connectés et du coaching durant le week-end pour la mise en oeuvre d’objets connectés.
+
+</div>
 							</div>
 						</div>
 
