--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 						<a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img src="images/contents/strasbourg-etudiants.png" alt="Strasbourg aime ses étudiants"></a>
 						<a href="http://alsacalcul.unistra.fr/" target="_blank"><img src="images/contents/alsacalcul.jpg" alt="Alsa Calcul"></a>
 						<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="images/contents/prglobalmedia.png" alt="PR Global Media"></a>
-						<a href="http://invitethemedia.com/" target="_blank"><img src="images/contents/invitethemedia.jpg" alt="InviteTheMedia"></a>
+						<!--<a href="http://invitethemedia.com/" target="_blank"><img src="images/contents/invitethemedia.jpg" alt="InviteTheMedia"></a>-->
 						<!--<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>-->
 						<!--<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>-->
 						<!--<a href="http://www.etena-univ.eu/" target="_blank"><img src="images/contents/pepite.jpg" alt="Pepite"></a>-->
