--- a/index.html
+++ b/index.html
@@ -594,6 +594,26 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/johan-bonassi.jpg" alt="Johan BONASSI">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Johan BONASSI</h4>
+									<div class="team-member-position">Strataggem - Objets connectés</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/coach/maxime-borges.jpg" alt="Maxime BORGES">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Maxime BORGES</h4>
+									<div class="team-member-position">Strataggem - Objets connectés</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Fabien BRENNER">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Fabien BRENNER</h4>
@@ -612,32 +632,32 @@
 							</div>
 						</div>
 
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/veronique-campillo.jpg" alt="Véronique CAMPILLO">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Véronique CAMPILLO</h4>
-									<div class="team-member-position">Pitch training</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/rene-carraz.jpg" alt="René CARRAZ">
-								<div class="team-member-text">
-									<h4 class="team-member-name">René CARRAZ</h4>
-									<div class="team-member-position">ACCRO</div>
-								</div>
-							</div>
-						</div>
-
 					</div>
 
 				</div>
 			</section>
 
 			<section class="team-section section" style="padding-top: 0;">
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/veronique-campillo.jpg" alt="Véronique CAMPILLO">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Véronique CAMPILLO</h4>
+							<div class="team-member-position">Pitch training</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/rene-carraz.jpg" alt="René CARRAZ">
+						<div class="team-member-text">
+							<h4 class="team-member-name">René CARRAZ</h4>
+							<div class="team-member-position">ACCRO</div>
+						</div>
+					</div>
+				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
@@ -679,8 +699,12 @@
 					</div>
 				</div>
 
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">
+
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/franck-hoonakker.jpg" alt="Franck HOONAKKER">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Franck HOONAKKER</h4>
@@ -690,7 +714,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/marie-hunyadi.jpg" alt="Marie HUNYADI">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Marie HUNYADI</h4>
@@ -698,10 +722,6 @@
 						</div>								
 					</div>
 				</div>
-
-			</section>
-
-			<section class="team-section section" style="padding-top: 0;">
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
@@ -725,6 +745,16 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/frederic-mossmann.jpg" alt="Frédéric MOSSMANN">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Frédéric MOSSMANN</h4>
+							<div class="team-member-position">Coach développement et électronique</div>
+						</div>
+					</div>
+				</div>	
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/axel-neveux.jpg" alt="Axel NEVEUX">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Axel NEVEUX</h4>
@@ -732,6 +762,10 @@
 						</div>
 					</div>
 				</div>
+
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
@@ -763,12 +797,8 @@
 					</div>
 				</div>
 
-			</section>
-
-			<section class="team-section section" style="padding-top: 0;">
-
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/celine-poloce-winter.jpg" alt="Céline POLOCE-WINTER">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Céline POLOCE-WINTER</h4>
@@ -778,7 +808,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/florence-remy.jpg" alt="Florence REMY">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Florence REMY</h4>
@@ -788,7 +818,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/bestien-stella.jpg" alt="Bastien STELLA">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Bastien STELLA</h4>
@@ -797,8 +827,22 @@
 					</div>
 				</div>
 
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">
+
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Léo UNBEKANDT</h4>
+							<div class="team-member-position">Scalingo</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/jean-daniel-weisz.jpg" alt="Jean-Daniel WEISZ">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Jean-Daniel WEISZ</h4>
@@ -808,7 +852,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Manuel YGUEL</h4>
@@ -816,7 +860,6 @@
 						</div>
 					</div>
 				</div>
-
 			</section>
 
 			<section id="jury" class="team-section section">
