--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@
 						#HICamp
 					</h3>					
 					
-					<!--<a href="http://issuu.com/alsacedigitale/docs/20151006_dp_hacking_industry_camp" style="display: block; margin-bottom: 40px; font-size: 18px;" target="_blank">Dossier de presse</a>-->
+					<a href="https://drive.google.com/open?id=0B0S2y3rk51DNVWxzQlBKeV9JNTg" style="display: block; margin-bottom: 40px; font-size: 18px;" target="_blank">Dossier de presse</a>
 
 					<div class="footer-socmed">						
 						<a href="http://facebook.com/alsace.digitale" target="_blank"><span class="fa fa-facebook"></span></a>
