--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
 					<h2 class="section-heading text-center hidden">Partenaires et sponsors</h2>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<p style="font-size: 17px;">Dans le cadre de son soutien au Hacking Industry Camp, le Groupe ÉS est partie prenante de l'organisation de l'évènement.</p><br>
-						<a href="http://www.es-groupe.fr/" target="_blank"><img src="images/contents/logo ES2.jpg" alt="Groupe ES"></a>
+						<p style="font-size: 17px;">Dans le cadre de son soutien au Hacking Industry Camp, ÉS est partie prenante de l'organisation de l'évènement.</p><br>
+						<a href="http://www.es-groupe.fr/" target="_blank"><img src="images/contents/logo ES2.jpg" alt="ES"></a>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
@@ -871,10 +871,10 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/jury/philippe-commaret.jpg" alt="Philippe COMMARET">
+								<img class="team-member-picture" src="images/contents/jury/birgit-fratzke-weiss.jpg" alt="Birgit FRATZKE-WEISS">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Philippe COMMARET</h4>
-									<div class="team-member-position">Directeur General d’ES Energies Strasbourg</div>
+									<h4 class="team-member-name">Birgit FRATZKE-WEISS</h4>
+									<div class="team-member-position">Directrice Générale Déléguée du Groupe ÉS</div>
 								</div>
 							</div>
 						</div>
