--- a/index.html
+++ b/index.html
@@ -1019,8 +1019,8 @@
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
-									<h3>Prix RHÉNA2</h3>
-									<p>● Un accompagnement pour une startup jusqu’à sa première levée de fond<br>● Révélation de l’excellence des leaders du projet<br>● Mise en cohérence de l’ADN du projet avec l’excellence des leaders<br>● Coaching des leaders dans l’affirmation de leur contribution maximale au projet<br>● Accompagnement du projet dans son futur émergent jusqu’à la rencontre de ses premiers financeurs</p>
+									<h3>Prix DÔME INCUBATEUR</h3>
+									<p>Il sera décerné à l'équipe d'intrapreneurs la plus audacieuse dans le potentiel de disruption de son projet. Elle gagnera un accompagnement sur 6 mois par les coachs de Dôme Incubateur, pour que l'Or du Rhin coule de leurs veines !<br>L'accompagnement, d'une valeur de 25 000 €, est offert par Gilles Auberger, Véronique Campillo, Yan-Erik Decorde et Gérald Masson. L'équipe sélectionnée rejoindra 4 startups ayant intégré l'Accélérateur depuis septembre pour vivre en synergie le déploiement de son projet.</p>
 								</div>
 							</div>
 						</div>
