--- a/index.html
+++ b/index.html
@@ -929,6 +929,16 @@
 							</div>
 						</div>
 
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/jury/nophoto.png" alt="Widad ZAGHLOUL">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Widad ZAGHLOUL</h4>
+									<div class="team-member-position">Fablab INSA</div>
+								</div>
+							</div>
+						</div>
+
 					</div>
 
 				</div>
