--- a/index.html
+++ b/index.html
@@ -860,6 +860,16 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Widad ZAGHLOUL">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Widad ZAGHLOUL</h4>
+							<div class="team-member-position">Fablab INSA</div>
+						</div>
+					</div>
+				</div>
 			</section>
 
 			<section id="jury" class="team-section section">
@@ -925,16 +935,6 @@
 								<div class="team-member-text">
 									<h4 class="team-member-name">Jacques WOLFF</h4>
 									<div class="team-member-position">Président fondateur de l’entreprise Sewosy</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/jury/nophoto.png" alt="Widad ZAGHLOUL">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Widad ZAGHLOUL</h4>
-									<div class="team-member-position">Fablab INSA</div>
 								</div>
 							</div>
 						</div>
