update coaches and sponsors

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 						<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="images/contents/prglobalmedia.png" alt="PR Global Media"></a>
 						<!--<a href="http://invitethemedia.com/" target="_blank"><img src="images/contents/invitethemedia.jpg" alt="InviteTheMedia"></a>-->
 						<!--<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>-->
-						<!--<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>-->
+						<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>
 						<!--<a href="http://www.etena-univ.eu/" target="_blank"><img src="images/contents/pepite.jpg" alt="Pepite"></a>-->
 						<!--<a href="http://www.etena-univ.eu/" target="_blank"><img src="images/contents/etena.jpg" alt="Etena"></a><br>-->
 					</div>
@@ -863,7 +863,7 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Widad ZAGHLOUL">
+						<img class="team-member-picture" src="images/contents/coach/widad-zaghloul.jpg" alt="Widad ZAGHLOUL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Widad ZAGHLOUL</h4>
 							<div class="team-member-position">Fablab INSA</div>
