--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix ALSACE DIGITALE</h3>
-									<p>Les lauréats Alsace Digitale auront accès à l’espace Flex pendant 6 mois pour tous les membres de l’équipe, ainsi qu’un accès gratuit à tous les évènements organisés par l’association juqu’à fin mars 2016.</p>
+									<p>Les lauréats Alsace Digitale auront accès à l’espace Flex pendant 6 mois pour tous les membres de l’équipe, ainsi qu’un accès gratuit au Startup Weekend Strasbourg du 18 au 20 novembre.</p>
 								</div>
 							</div>
 							<div class="row">
@@ -1240,7 +1240,10 @@
 						#HICamp
 					</h3>					
 					
-					<a href="https://drive.google.com/open?id=0B0S2y3rk51DNVWxzQlBKeV9JNTg" style="display: block; margin-bottom: 40px; font-size: 18px;" target="_blank">Dossier de presse</a>
+					<div style="display: block; margin-bottom: 40px; font-size: 18px;">
+						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNVWxzQlBKeV9JNTg" target="_blank">Communiqué de presse</a> - 
+						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNQUhzZlMtekhiOXFUVE1OcEt1MFprLVJYN0VV" target="_blank">Dossier de presse</a>
+					</div>
 
 					<div class="footer-socmed">						
 						<a href="http://facebook.com/alsace.digitale" target="_blank"><span class="fa fa-facebook"></span></a>
