--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 							<li><a href="#keynotes">Keynotes</a></li>
 							<li><a href="#coachs">Coachs &amp; Jury</a>
 							<li><a href="#prizes">Prix</a>
+							<li><a href="#winners">Résultats</a>
 							<!--
-								<li><a href="#winners">Résultats</a>
 								<li><a href="#faq">FAQ</a></li>
 							-->
 
 							<!-- HEADER ACTION BUTTON -->
-							<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2016-27211092109" class="btn btn-primary">S'inscrire</a></li>
+							<!-- <li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2016-27211092109" class="btn btn-primary">S'inscrire</a></li> -->
 							<li class="header-action-button"><a target="_blank" href="http://hic2016.sparkboard.com" class="btn btn-primary">Les défis</a></li>
 							<!-- <li class="header-action-button"><a target="_blank" href="http://2015.hackingindustry.camp" class="btn btn-primary">Édition 2015</a></li> -->
 						</ul>
@@ -201,8 +201,8 @@
 									</ul>
 		
 									<div class="hero-buttons col-md-12 text-center">
-										<a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2016-27211092109" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>
-										<!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>-->
+										<!--<a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2016-27211092109" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>-->
+										<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
 										<!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
 
 									</div>
@@ -1041,23 +1041,28 @@
 
 			</section>
 
-			<!--<section id="winners" class="section">
+			<section id="winners" class="section">
 
 				<div class="container">
 
 					<h2 class="section-heading text-center">Les résultats</h2>
 
-					<p class="col-md-12 text-center">Pas moins de 11 prototypes de projets sont sortis de cette édition 2015, et 7 d'entre eux ont été primés</strong></p>
+					<p class="col-md-12 text-center">Pas moins de 14 prototypes de projets sont sortis de cette édition 2016, et 10 d'entre eux ont été primés</strong></p>
 
-					<ul class="col-md-6 col-md-offset-3">
-						<li><i class="fa fa-trophy"></i> Prix Scalingo 1 : <a href="http://hackingindustrycamp.sparkboard.com/project/560bd14850d3bd03007a0672" target="_blank"> #2 Esybill</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Scalingo 2 : <a href="http://hackingindustrycamp.sparkboard.com/project/560aab73cd9f050300c68067" target="_blank"> #1 Le tableau connecté de la Smarthome</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Scalingo 3 : <a href="http://hackingindustrycamp.sparkboard.com/project/560bd7e550d3bd03007a0681" target="_blank"> #8 Data Visualisation</a></li>
-						<li><i class="fa fa-trophy"></i> Prix La Fabrique : <a href="http://hackingindustrycamp.sparkboard.com/project/5611a1e158775503002bcbb3" target="_blank"> #22 Looky Lux</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Alsace Digitale : <a href="http://hackingindustrycamp.sparkboard.com/project/560e7a4cee247f0300aa3fb7" target="_blank"> #21 Interfacile</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Rhenatoo : <a href="http://hackingindustrycamp.sparkboard.com/project/560d7de8b6934b0300925c44" target="_blank"> #20 Wine Cluster</a></li>
-						<li><i class="fa fa-trophy"></i> Prix PR World Media : <a href="http://hackingindustrycamp.sparkboard.com/project/560bd90950d3bd03007a0689" target="_blank"> #12 Chasse O Gaspi</a></li>
-						<li><i class="fa fa-trophy"></i> Prix ES : <a href="http://hackingindustrycamp.sparkboard.com/project/5611a1e158775503002bcbb3" target="_blank"> #22 Looky Lux</a></li>
+					<ul class="col-md-8 col-md-offset-2" style="padding-left: 50px;">
+						<li><i class="fa fa-trophy"></i> Prix La Fabrique : <a href="http://hic2016.sparkboard.com/project/57f7b1e4ca356d03005dcd0a" target="_blank">#19 - "Sakura : Assurer la sécurité du personnel isolé"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Scalingo 1 (1000€) : <a href="http://hic2016.sparkboard.com/project/57ed301a105e7f03009b949f" target="_blank">#17 - "Sweet Home"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Scalingo 2 (500€) : <a href="http://hic2016.sparkboard.com/project/57fb66d9a8fc5e0300a02fb8" target="_blank">#20 - "LogStradamus"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Scalingo 3 (500€): <a href="http://hic2016.sparkboard.com/project/57b31c6176a3010300e2172b" target="_blank">#7  - "Mes coûts énergétiques"</a> et <a href="http://hic2016.sparkboard.com/project/57e51b14f4ba2103003a8e3b" target="_blank">14 - "ME : My Earth, My Energy"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix ÉS : <a href="http://hic2016.sparkboard.com/project/57f7b1e4ca356d03005dcd0a" target="_blank"> #19 - "Sakura : Assurer la sécurité du personnel isolé"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Orange : <a href="http://hic2016.sparkboard.com/project/5800cd398396e803002e62ac" target="_blank">#29 - "Stand'Up"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Rhénatic : <a href="http://hic2016.sparkboard.com/project/57b5b6a27ce7cd03009db80b" target="_blank">#9 - "SOS+"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Accro : <a href="http://hic2016.sparkboard.com/project/57fcc6f26b289603007175b2" target="_blank">#23 - "ID Crowd"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix PRGlobalMedia : <a href="http://hic2016.sparkboard.com/project/57fe13815d72640300286d55" target="_blank">#27  - "TYPECO"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Alsace Digitale 1 (coworking + billets swsxb): <a href="http://hic2016.sparkboard.com/project/5800cd398396e803002e62ac" target="_blank">#29 - "Stand'Up"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Alsace Digitale 2 (billets swsxb): <a href="http://hic2016.sparkboard.com/project/57fd50bf5d72640300286cb7" target="_blank">#25 - "Log Us On"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Alsa Calcul : <a href="http://hic2016.sparkboard.com/project/57fb66d9a8fc5e0300a02fb8" target="_blank">#20 - "LogStradamus"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Dôme Incubateur : <a href="http://hic2016.sparkboard.com/project/57b31c6176a3010300e2172b" target="_blank">#7  - "Mes coûts énergétiques"</a> et <a href="http://hic2016.sparkboard.com/project/57e51b14f4ba2103003a8e3b" target="_blank">14 - "ME : My Earth, My Energy"</a></li>
 					</ul>
 
 				</div>
@@ -1076,7 +1081,12 @@
 
 				<div class="container">
 					<div class="row">
-						<div class="col-md-6">
+						<div class="col-md-12">
+							<h3 class="closing-shout">L'événement #HICamp 2016 est fini, les photos prises par nos bénévoles arrivent bientôt !</h3>
+
+							<!--<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://www.leamariette.fr/hacking-industrie-camp/"class="btn btn-lg btn-primary" target="_blank">Voir les photos</a></div>-->
+						</div>
+						<!--<div class="col-md-6">
 							<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
 
 							<div class="closing-buttons" data-animation="tada"><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2016-27211092109" class="btn btn-lg btn-primary">J'y vais !</a></div>
@@ -1085,7 +1095,7 @@
 							<h3 class="closing-shout">Inscris ? Consultez dès à présent la liste des défis, vous pouvez également proposer le vôtre !</h3>
 
 							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hic2016.sparkboard.com/"class="btn btn-lg btn-primary" target="_blank">Voir les défis / Proposer un défi</a></div>
-						</div>
+						</div>-->
 					</div>
 				</div>
 
