--- a/index.html
+++ b/index.html
@@ -1082,9 +1082,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<h3 class="closing-shout">L'événement #HICamp 2016 est fini, les photos prises par nos bénévoles arrivent bientôt !</h3>
+							<h3 class="closing-shout">L'événement #HICamp 2016 est fini, revivez l'événement à travers les photos prises par nos bénévoles !</h3>
 
-							<!--<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://www.leamariette.fr/hacking-industrie-camp/"class="btn btn-lg btn-primary" target="_blank">Voir les photos</a></div>-->
+							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="https://www.facebook.com/media/set/?set=a.1455759991105511.1073741839.114361761912014&type=1&l=4099b7e0a2"class="btn btn-lg btn-primary" target="_blank">Voir les photos</a></div>
 						</div>
 						<!--<div class="col-md-6">
 							<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
