--- a/index.html
+++ b/index.html
@@ -172,7 +172,12 @@
 									</div>-->
 									<img src="images/contents/amphi.jpg" style="width: 100%" alt="hacking industry camp 2017">
 
-									<p class="lead"> <strong>Du 13 au 15 octobre 2017</strong> <br>La troisième édition du Hackathon dédié à l'Industrie en Alsace <br>54h pour innover et inventer l'industrie 4.0</p>
+									<p class="lead"> <strong>Du 13 au 15 octobre 2017</strong> <br>La troisième édition du Hackathon dédié à l'Industrie en Alsace <br>54h pour innover et inventer l'industrie 4.0
+									<span style="font-style: normal;font-size: 17px; padding-top: 6px;"><br>
+										<strong>Jetez un coup d'oeil aux éditions précédentes : </strong> 
+										<a href="http://2015.hackingindustry.camp/" target="_blank">2015</a> - 
+										<a href="http://2016.hackingindustry.camp/" target="_blank">2016</a>
+									</span>
 
 								</div>
 
